--- a/css/basics/style.css
+++ b/css/basics/style.css
@@ -1,7 +1,12 @@
 h1 {
-  color: blue;
+  color: red;
+  text-shadow: 1px 2px 1px black;
+  text-align: center;
+  padding: 10px;
+  background: linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0));
   background-color: yellow;
-  border: 1px solid black;
+  
+  box-shadow: 3px 3px 6px black;  
 }
 
 p {
@@ -15,5 +20,20 @@ span {
 
 p, li {
   text-decoration: underline;
+  color: blue;
 }
 
+/* Class selectors */
+.first {
+  font-weight: bold;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.base-box {
+  text-decoration: none;
+  padding: 3px 3px 3px 7px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.50));
+}
