--- a/css/basics/style.css
+++ b/css/basics/style.css
@@ -37,3 +37,14 @@ p, li {
   padding: 3px 3px 3px 7px;
   background: linear-gradient(to bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.50));
 }
+
+.important {
+  font-weight: bold;
+}
+
+
+.warning {
+  background-color: #ff9999;
+  border-left: 6px solid #aa3333;
+}
+
