--- a/css/basics/style.css
+++ b/css/basics/style.css
@@ -154,3 +154,61 @@ div.combi h1 + p {
   font-weight: bold;
   color: blue;
 }
+
+div.values p {
+  margin: 15px 5px;
+  padding: 10px;
+  border: 2px solid black;
+}
+
+div.values p:nth-child(1) {
+  width: 150px;
+  font-size: 18px;
+}
+
+div.values p:nth-child(2), p:nth-child(3) {
+  width: 250px;
+  font-size: 24px;
+}
+
+div.anim p {
+  color: red;
+  width: 100px;
+  font-size: 40px;
+  transform-origin: center;
+}
+
+div.anim p:hover {
+  animation-name: rotate;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+  animation-iteration-count: 5;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+div.percent div.boxes {
+  margin: 10px;
+  font-size: 200%;
+  color: white;
+  height: 150px;
+  border: 2px solid black;
+}
+
+div.percent div.boxes:nth-child(1) {
+  background-color: red;
+  width: 75%;
+}
+
+div.percent div.boxes:nth-child(2) {
+  background-color: blue;
+  width: 650px;
+}
