--- a/css/basics/style.css
+++ b/css/basics/style.css
@@ -212,3 +212,23 @@ div.percent div.boxes:nth-child(2) {
   background-color: blue;
   width: 650px;
 }
+
+div.colors p {
+  height: 50px;
+  width: 350px;
+}
+
+div.colors p:nth-child(1) {
+  position: relative;
+  top: 30px;
+  left: 50px;
+  background-color: rgba(200, 30, 30, 0.5);
+}
+
+div.colors p:nth-child(2) {
+  color: black;
+  position: relative;
+  left: 150px;
+  background-color: rgb(30, 30, 200);
+  opacity: 0.8;
+}
