--- a/css/basics/style.css
+++ b/css/basics/style.css
@@ -232,3 +232,20 @@ div.colors p:nth-child(2) {
   background-color: rgb(30, 30, 200);
   opacity: 0.8;
 }
+
+div.important #winning {
+  background-color: red;
+  border: 1px solid black;
+}
+
+div.important .better {
+  background-color: gray;
+  border: none !important;
+}
+
+div.important p {
+  background-color: blue; 
+  color: white;
+  padding: 5px;
+
+}
